# markdown-rag-

./: .gitignore  CLAUDE.md  README.md  config.py  dedupe.py  extract.py  ingest.py  main.py  prepare.py  pyproject.toml  router.py  schemas.py  store.py  structured_data.json  ui.py
md_files/: AGENTS.md  CLAUDE.md  README.md  bugs-and-fixes.md  codex-review.md  decisions.md  tool-comparison.md  work-log.md
