[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.17.3",
    "llama-index>=0.14.22",
    "llama-index-embeddings-cohere>=0.8.0",
    "llama-index-llms-openai>=0.6.6",
    "llama-index-postprocessor-cohere-rerank>=0.9.0",
    "llama-index-utils-workflow>=0.10.1",
    "llama-index-vector-stores-pinecone>=0.8.0",
    "netfree-unstrict-ssl>=0.1.3",
    "python-dotenv>=1.2.2",
]
